--- a/DanceCalc/DanceLib/DanceLibrary.resx
+++ b/DanceCalc/DanceLib/DanceLibrary.resx
@@ -121,4 +121,7 @@
   <data name="Dances" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>dances.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e;utf-8</value>
   </data>
+  <data name="JsonDances" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>dances.txt;System.String, mscorlib, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e, Retargetable=Yes;Windows-1252</value>
+  </data>
 </root>
