--- a/DanceCalc/DanceLib/DanceLibrary.resx
+++ b/DanceCalc/DanceLib/DanceLibrary.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="DanceGroups" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>dancegroups.txt;System.String, mscorlib, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e, Retargetable=Yes;Windows-1252</value>
+  </data>
   <data name="Dances" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>dances.xml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e;utf-8</value>
   </data>
